# sitcom-corpus-analysis

./: .gitignore  README.md  data_cleaning.ipynb  data_processing.py  environment.yml  info.py  mbti_model_training.py  pyproject.toml  pytest.ini  requirements.txt  style_transfer.py  verify_installation.py
__MACOSX/: ._raw_data
information_retrieval/: USAGE.txt  __init__.py  __main__.py  cache_utils.py  data_processing.py  search.py
mbti_model/: USAGE.txt  __init__.py  main.py  mbti_baseline_nb.py  mbti_bundle.pkl  mbti_model_training.py  mbti_prediction.py
mbti_prediction/: __init__.py  __main__.py  data_processing.py  mbti-personality-predictor-using-machine-learning.ipynb  mbti_model_training.py  mbti_prediction.py  predict_characters.py  run_mbti_model.py  trained_mbti_model.pkl
sitcom_analysis/: USAGE.txt  __init__.py  __main__.py  combined_features.py  style_transfer_module.py
tests/: __init__.py  conftest.py  test_information_retrieval.py  test_mbti_prediction.py  test_sitcom_analysis.py
