[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sitcom-corpus-analysis"
version = "1.0.0"
description = "Sitcom corpus analysis with information retrieval and MBTI personality prediction"
readme = "README.md"
requires-python = ">=3.9,<3.12"
license = {text = "MIT"}
authors = [
    {name = "Sitcom Analysis Team"},
]
keywords = ["nlp", "information-retrieval", "mbti", "sitcom", "text-analysis"]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0,<2.3.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "joblib>=1.3.0",
    "tqdm>=4.65.0",
    "rank-bm25>=0.2.2",
    "spacy>=3.8.0",
    "nltk>=3.8.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "torchaudio>=2.9.0",
    "sentence-transformers>=5.1.2",
    "transformers>=4.57.2",
    "openai>=2.9.0"
]


[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "ipython>=8.0.0",
]

[project.scripts]
sitcom-search = "information_retrieval.__main__:main"
sitcom-mbti   = "mbti_prediction.__main__:main"
sitcom        = "sitcom_analysis.__main__:main"
sitcom-style = "sitcom_analysis.style_transfer_module:main"

[tool.setuptools]
packages = ["information_retrieval", "mbti_prediction", "sitcom_analysis"]

[tool.setuptools.package-data]
"*" = ["*.txt"]
"mbti_model" = ["*.pkl"]